--- a/AppCrud/Views/Empleado/Lista.cshtml
+++ b/AppCrud/Views/Empleado/Lista.cshtml
@@ -3,11 +3,13 @@
 *@
 @{
 }
+
 @model List<AppCrud.Models.Empleado>;
 
 <div class="row">
     <div class="col-sm-8 offset-sm-2">
         <h2>Lista empleados</h2>
+        <a asp-controller="Empleado" asp-action="Nuevo" class="btn btn-success mb-3">Nuevo</a>
         <table class="table table-bordered">
             <thead>
                 <tr>
