Nuevo controlador Post, para enviar los datos, también correción en el formulario

--- a/AppCrud/Views/Empleado/Lista.cshtml
+++ b/AppCrud/Views/Empleado/Lista.cshtml
@@ -28,7 +28,7 @@
                         <td>@item.NombreCompleto</td>
                         <td>@item.Correo</td>
                         <td>@item.FechaContrato.ToString("dd/MM/yyyy")</td>
-                        <td>(@item.Activo ? "SI":"NO")</td>
+                        <td>@(item.Activo ? "SI" : "NO")</td>
                         <td>
                            @*  <a
                                 as
